<resources>
    <string name="app_name">Project Manager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_message">Enter ID</string>
    <string name="title_message">Enter title</string>
    <string name="button_new">New</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="jobtitle_message">Enter job title</string>
    <string name="id_label">ID:</string>
    <string name="title_label">Title:</string>
    <string name="jobtitle_label">Job title:</string>
    <string name="firstname_label">First name:</string>
    <string name="firstname_message">Enter first name</string>
    <string name="lastname_label">Last name:</string>
    <string name="lastname_message">Enter last name</string>
    <string name="department_label">Department:</string>
    <string name="department_message">Enter department</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_label_id">ID:</string>
    <string name="project_label_name">Name:</string>
    <string name="project_label_contractor">Contr.:</string>
    <string name="project_label_processmodel">Proc-M.:</string>
    <string name="project_label_startdate">Start:</string>
    <string name="project_label_enddate">End:</string>
    <string name="project_label_description">Descr.:</string>
    <string name="project_btn_new">New</string>
    <string name="project_btn_save">Save</string>
    <string name="project_btn_delete">Delete</string>
    <string name="activity_btn_new">New</string>
    <string name="activity_btn_save">Save</string>
    <string name="activity_btn_delete">Delete</string>
    <string name="activity_label_id">ID:</string>
    <string name="activity_label_name">Name:</string>
    <string name="activity_label_priority">Priority:</string>
    <string name="activity_label_startdate">Start date:</string>
    <string name="activity_label_enddate">End date:</string>
    <string name="activity_label_effort">Effort:</string>
    <string name="activity_hint_id">enter ID</string>
    <string name="activity_hint_name">enter name</string>
    <string name="activity_label_project">Project:</string>
    <string name="invalid_date_format">Invalid date format! Use YYYY-MM-DD!</string>
    <string name="action_details_new">New</string>
    <string name="action_details_save">Save</string>
    <string name="action_details_delete">Delete</string>
    <string name="invalid_number_format">Invalid number format!</string>
    <string name="pref_main">Main Preferences</string>
    <string name="pref_processmodel_default">Scrum</string>
    <string name="pref_summary_user_email">email address to send notifications to</string>
    <string name="pref_title_user_email">E-Mail</string>
    <string name="pref_summary_default_priority">default priority for new activities</string>
    <string name="pref_title_default_priority">Default priority</string>
    <string name="pref_title_default_processmodel">Default process model</string>
    <string name="pref_summary_default_processmodel">default process model for new projects</string>

    <string-array name="pref_processmodel_entries">
        <item>Waterfall</item>
        <item>Scrum</item>
        <item>XP</item>
        <item>RUP</item>
        <item>V-Model</item>
    </string-array>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="pref_key_default_processmodel">pref_key_default_processmodel</string>
    <string name="pref_key_default_priority">pref_key_default_priority</string>
    <string name="pref_key_user_email">pref_key_user_email</string>
    <string name="write_activities">Write Activities</string>
    <string name="show_activities">Show Activities</string>
    <string name="load_activities">Load Activities</string>
    <string name="activity_hint_priority">Enter priority</string>
    <string name="activity_hint_startdate">Enter start date</string>
    <string name="activity_hint_enddate">Enter end date</string>
    <string name="activity_hint_effort">Enter effort</string>
</resources>
