<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <GridLayout
        android:id="@+id/activity_details_parent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="6"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/activity_label_id"
            android:text="@string/activity_label_id"
            android:layout_gravity="end"
            android:layout_columnSpan="1"
            android:labelFor="@+id/activity_txt_id" />

        <EditText
            android:id="@+id/activity_txt_id"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="5"
            android:hint="@string/activity_hint_id"
            android:inputType="number" />

        <TextView
            android:id="@+id/activity_label_name"
            android:text="@string/activity_label_name"
            android:layout_gravity="end"
            android:labelFor="@+id/activity_txt_name"

            />

        <EditText
            android:id="@+id/activity_txt_name"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="5"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:hint="@string/activity_hint_name" />

        <TextView
            android:id="@+id/activity_label_priority"
            android:text="@string/activity_label_priority"
            android:layout_gravity="end" />

        <EditText
            android:id="@+id/activity_txt_priority"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="5"
            android:hint="@string/activity_hint_priority" />

        <TextView
            android:id="@+id/activity_label_startdate"
            android:text="@string/activity_label_startdate"
            android:layout_gravity="end" />

        <EditText
            android:id="@+id/activity_txt_startdate"
            android:inputType="date"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="5"
            android:hint="@string/activity_hint_startdate" />

        <TextView
            android:id="@+id/activity_label_enddate"
            android:text="@string/activity_label_enddate"
            android:layout_gravity="end" />

        <EditText
            android:id="@+id/activity_txt_enddate"
            android:inputType="date"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="5"
            android:hint="@string/activity_hint_enddate" />

        <TextView
            android:id="@+id/activity_label_effort"
            android:text="@string/activity_label_effort"
            android:layout_gravity="end" />

        <EditText
            android:id="@+id/activity_txt_effort"
            android:layout_gravity="fill_horizontal"
            android:inputType="numberDecimal"
            android:layout_columnSpan="5"
            android:hint="@string/activity_hint_effort" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="6">

            <Button
                android:id="@+id/activity_btn_new"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:drawableLeft="@drawable/ic_add_black_24dp"
                android:minWidth="50dp"
                android:gravity="center" />

            <Button
                android:id="@+id/activity_btn_save"
                android:drawableLeft="@drawable/ic_save_black_24dp"
                android:minWidth="50dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <Button
                android:id="@+id/activity_btn_delete"
                android:drawableLeft="@drawable/ic_delete_black_24dp"
                android:minWidth="50dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </LinearLayout>


    </GridLayout>


</ScrollView>