<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_write_activities"
        android:title="@string/write_activities"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_activities"
        android:title="@string/show_activities"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <!--<item-->
    <!--android:id="@+id/action_load_activities"-->
    <!--android:title="@string/load_activities"-->
    <!--android:orderInCategory="300"-->
    <!--app:showAsAction="never" />-->
</menu>
