<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <GridLayout
        android:id="@+id/project_details_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/project_label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_id" />

        <EditText
            android:id="@+id/project_txt_id"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:inputType="number" />

        <TextView
            android:id="@+id/project_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_name" />

        <EditText
            android:id="@+id/project_txt_name"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            />

        <TextView
            android:id="@+id/project_label_contractor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_contractor" />

        <EditText
            android:id="@+id/project_txt_contractor"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            />

        <TextView
            android:id="@+id/project_label_processmodel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_processmodel" />

        <EditText
            android:id="@+id/project_txt_processmodel"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            />

        <TextView
            android:id="@+id/project_label_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_startdate" />

        <EditText
            android:id="@+id/project_txt_startdate"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:inputType="date"
            />

        <TextView
            android:id="@+id/project_label_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_enddate" />

        <EditText
            android:id="@+id/project_txt_enddate"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:inputType="date"
            />

        <TextView
            android:id="@+id/project_label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:hint="@string/project_label_description" />

        <EditText
            android:id="@+id/project_txt_description"
            android:layout_columnWeight="1"
            android:layout_height="100dp"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:gravity="top"
            android:inputType="textMultiLine"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4">

            <Button
                android:id="@+id/project_btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_add_black_24dp"
                android:minWidth="0dp" />

            <Button
                android:id="@+id/project_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_save_black_24dp"
                android:minWidth="0dp" />

            <Button
                android:id="@+id/project_btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_delete_black_24dp"
                android:minWidth="0dp" />

        </LinearLayout>


    </GridLayout>

</ScrollView>
